--- a/code.ipynb
+++ b/code.ipynb
@@ -16,6 +16,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0f26a5d",
+   "metadata": {},
+   "source": [
+    "Objective:\n",
+    "Preprocess the data such that it is by game sets(overall winner), average of all of it up until then(including all the stats before). \n",
+    "\n",
+    "Psuedo-code:\n",
+    "We will iterate through all the Game IDs of a match between two teams and calculate average of runs, pitches, etc. We will now attach who won from finding winner from those set of matches and will create a new csv like that. Following, the average of two teams will also be dependent on past matches that happend such that there game stats are made from there. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dbe18786",
