Some more preprocessing and outlines defined

--- a/code.ipynb
+++ b/code.ipynb
@@ -19,8 +19,9 @@
    "id": "8dc17274",
    "metadata": {},
    "source": [
-    "We compiled data from https://retrosheet.org/downloads/csvdownloads.html. Our hypothesis is of the following proposed question: \n",
-    "    Given two teams statistics and date they played, we can predict who won that specific match."
+    "Predicting winning 2025 Baseball Team\n",
+    "- \n",
+    "Note: We compiled data from https://retrosheet.org/downloads/csvdownloads.html. "
    ]
   },
   {
@@ -28,7 +29,9 @@
    "id": "9ff9a4e0",
    "metadata": {},
    "source": [
-    "Alternative hypothesises could be if weather, time of day effect, location of playing, or any internal features of a team such as plate appearances affects a teams peformance. "
+    "### Hypothesis\n",
+    "Given two teams statistics and date they played, we can predict who won that specific match. <br><br>\n",
+    "Alternative hypothesises could be if weather, time of day effect, location of playing affect a teams outcome. Following, we can also see if any interal statistics of a team such as batter appearances or stolen bases influence a match's outcome or not. "
    ]
   },
   {
@@ -36,7 +39,7 @@
    "id": "8fc5f68d",
    "metadata": {},
    "source": [
-    "Some sets of challenges we will have to address through this project are calculating the statistics of each team leading up to the specified date and avoiding early game training(especially due to the lack of data)."
+    "Limitations of our model: It cannot predict winners in early games due to a lack of data around that time. Although we can incoporate data from last year, many other factors such as team swaps and new playing strategies can affect data from season to season may from this."
    ]
   },
   {
@@ -669,34 +672,6 @@
     "        polished_teamStats_df.loc[len(polished_teamStats_df)] = teamFeatures\n",
     "\n",
     "polished_teamStats_df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c0f26a5d",
-   "metadata": {},
-   "source": [
-    "Objective:\n",
-    "Preprocess the data such that it is by game sets(overall winner), average of all of it up until then(including all the stats before). \n",
-    "\n",
-    "Psuedo-code:\n",
-    "We will iterate through all the Game IDs of a match between two teams and calculate average of runs, pitches, etc. We will now attach who won from finding winner from those set of matches and will create a new csv like that. Following, the average of two teams will also be dependent on past matches that happend such that there game stats are made from there. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "zip-handler",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import zipfile\n",
-    "import os\n",
-    "\n",
-    "# Create new folder and extract zip\n",
-    "os.makedirs('new_folder', exist_ok=True)\n",
-    "with zipfile.ZipFile('your_file.zip', 'r') as zip_ref:\n",
-    "    zip_ref.extractall('new_folder')"
    ]
   },
   {
