--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "5e987b00-e742-4b73-abd8-441905763c7e",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "dbe18786",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "75214eb6",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "b0347d81",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
        "[5 rows x 111 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "f2de6fb1",
    "metadata": {},
    "outputs": [
@@ -668,7 +668,7 @@
        "[5 rows x 111 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "7682db48",
    "metadata": {},
    "outputs": [],
@@ -772,201 +772,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "97440add",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>team</th>\n",
-       "      <th>b_pa</th>\n",
-       "      <th>b_ab</th>\n",
-       "      <th>b_r</th>\n",
-       "      <th>b_h</th>\n",
-       "      <th>b_d</th>\n",
-       "      <th>b_t</th>\n",
-       "      <th>b_hr</th>\n",
-       "      <th>b_w</th>\n",
-       "      <th>...</th>\n",
-       "      <th>p_r</th>\n",
-       "      <th>p_w</th>\n",
-       "      <th>p_k</th>\n",
-       "      <th>p_hbp</th>\n",
-       "      <th>p_sb</th>\n",
-       "      <th>p_cs</th>\n",
-       "      <th>d_a</th>\n",
-       "      <th>d_dp</th>\n",
-       "      <th>d_tp</th>\n",
-       "      <th>d_sb</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20250318</td>\n",
-       "      <td>LAN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20250318</td>\n",
-       "      <td>CHN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20250319</td>\n",
-       "      <td>LAN</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20250319</td>\n",
-       "      <td>CHN</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20250327</td>\n",
-       "      <td>CHN</td>\n",
-       "      <td>36.5</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       date team  b_pa  b_ab  b_r  b_h  b_d  b_t  b_hr  b_w  ...  p_r  p_w  \\\n",
-       "0  20250318  LAN   0.0   0.0  0.0  0.0  0.0  0.0   0.0  0.0  ...  0.0  0.0   \n",
-       "1  20250318  CHN   0.0   0.0  0.0  0.0  0.0  0.0   0.0  0.0  ...  0.0  0.0   \n",
-       "2  20250319  LAN  42.0  34.0  4.0  7.0  2.0  0.0   0.0  8.0  ...  1.0  1.0   \n",
-       "3  20250319  CHN  32.0  30.0  1.0  3.0  1.0  0.0   0.0  1.0  ...  4.0  8.0   \n",
-       "4  20250327  CHN  36.5  32.0  2.0  5.5  1.5  0.0   0.0  4.0  ...  5.0  7.5   \n",
-       "\n",
-       "   p_k  p_hbp  p_sb  p_cs   d_a  d_dp  d_tp  d_sb  \n",
-       "0  0.0    0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
-       "1  0.0    0.0   0.0   0.0   0.0   0.0   0.0   0.0  \n",
-       "2  9.0    1.0   1.0   0.0   8.0   0.0   0.0   1.0  \n",
-       "3  9.0    0.0   0.0   0.0   9.0   0.0   0.0   0.0  \n",
-       "4  9.0    0.0   0.0   0.0  10.5   1.5   0.0   0.0  \n",
-       "\n",
-       "[5 rows x 28 columns]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m teams \u001b[38;5;241m=\u001b[39m teamStats\u001b[38;5;241m.\u001b[39mloc[(teamStats[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgid\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m gameId)]\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _, row \u001b[38;5;129;01min\u001b[39;00m teams\u001b[38;5;241m.\u001b[39miterrows():\n\u001b[0;32m----> 8\u001b[0m     teamFeatures \u001b[38;5;241m=\u001b[39m findFeatures(key_features, row)\n\u001b[1;32m      9\u001b[0m     teamFeatures[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     10\u001b[0m     teamFeatures[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mteam\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mteam\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "Cell \u001b[0;32mIn[15], line 10\u001b[0m, in \u001b[0;36mfindFeatures\u001b[0;34m(key_features, row)\u001b[0m\n\u001b[1;32m      7\u001b[0m feature_total_sum \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      8\u001b[0m count \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _, row1 \u001b[38;5;129;01min\u001b[39;00m teamLeadingStats\u001b[38;5;241m.\u001b[39miterrows():\n\u001b[1;32m     11\u001b[0m     count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     12\u001b[0m     feature_total_sum \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m row1[feature]\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.13/site-packages/pandas/core/frame.py:1554\u001b[0m, in \u001b[0;36mDataFrame.iterrows\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1552\u001b[0m using_cow \u001b[38;5;241m=\u001b[39m using_copy_on_write()\n\u001b[1;32m   1553\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalues):\n\u001b[0;32m-> 1554\u001b[0m     s \u001b[38;5;241m=\u001b[39m klass(v, index\u001b[38;5;241m=\u001b[39mcolumns, name\u001b[38;5;241m=\u001b[39mk)\u001b[38;5;241m.\u001b[39m__finalize__(\u001b[38;5;28mself\u001b[39m)\n\u001b[1;32m   1555\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m using_cow \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_mgr\u001b[38;5;241m.\u001b[39mis_single_block:\n\u001b[1;32m   1556\u001b[0m         s\u001b[38;5;241m.\u001b[39m_mgr\u001b[38;5;241m.\u001b[39madd_references(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_mgr)  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.13/site-packages/pandas/core/series.py:593\u001b[0m, in \u001b[0;36mSeries.__init__\u001b[0;34m(self, data, index, dtype, name, copy, fastpath)\u001b[0m\n\u001b[1;32m    590\u001b[0m         data \u001b[38;5;241m=\u001b[39m SingleArrayManager\u001b[38;5;241m.\u001b[39mfrom_array(data, index)\n\u001b[1;32m    592\u001b[0m NDFrame\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, data)\n\u001b[0;32m--> 593\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m=\u001b[39m name\n\u001b[1;32m    594\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_axis(\u001b[38;5;241m0\u001b[39m, index)\n\u001b[1;32m    596\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m original_dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m is_pandas_object \u001b[38;5;129;01mand\u001b[39;00m data_dtype \u001b[38;5;241m==\u001b[39m np\u001b[38;5;241m.\u001b[39mobject_:\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.13/site-packages/pandas/core/generic.py:6320\u001b[0m, in \u001b[0;36mNDFrame.__setattr__\u001b[0;34m(self, name, value)\u001b[0m\n\u001b[1;32m   6317\u001b[0m \u001b[38;5;66;03m# if this fails, go on to more involved attribute setting\u001b[39;00m\n\u001b[1;32m   6318\u001b[0m \u001b[38;5;66;03m# (note that this matches __getattr__, above).\u001b[39;00m\n\u001b[1;32m   6319\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_internal_names_set:\n\u001b[0;32m-> 6320\u001b[0m     \u001b[38;5;28mobject\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__setattr__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name, value)\n\u001b[1;32m   6321\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_metadata:\n\u001b[1;32m   6322\u001b[0m     \u001b[38;5;28mobject\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__setattr__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name, value)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.13/site-packages/pandas/core/series.py:784\u001b[0m, in \u001b[0;36mSeries.name\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m    736\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    737\u001b[0m \u001b[38;5;124;03m    Return the name of the Series.\u001b[39;00m\n\u001b[1;32m    738\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    780\u001b[0m \u001b[38;5;124;03m    'Even Numbers'\u001b[39;00m\n\u001b[1;32m    781\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m    782\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_name\n\u001b[0;32m--> 784\u001b[0m \u001b[38;5;129m@name\u001b[39m\u001b[38;5;241m.\u001b[39msetter\n\u001b[1;32m    785\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mname\u001b[39m(\u001b[38;5;28mself\u001b[39m, value: Hashable) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    786\u001b[0m     validate_all_hashable(value, error_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.name\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    787\u001b[0m     \u001b[38;5;28mobject\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__setattr__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_name\u001b[39m\u001b[38;5;124m\"\u001b[39m, value)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -1018,6 +842,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "21fef93b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polished_teamStats_df = pd.read_csv(\"polished_teamStats.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4b678cfa",
    "metadata": {},
@@ -1028,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "effae816",
    "metadata": {},
    "outputs": [
@@ -1055,19 +889,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Two Box and Whiskers: Wins/ Losses. Show that the average number of runs and compare if the median is bigger than another team."
+    "# Two Box and Whiskers: Wins/ Losses. Show that the average number of runs and compare if the median is bigger than another team.\n",
+    "# yankees vs mets\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f0b449a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(gameInfo[[\"visteam\",\"hometeam\",\"date\"]],gameInfo[\"wteam\"])\n"
+    "X_train, X_test, Y_train, Y_test = train_test_split(gameInfo[[\"visteam\",\"hometeam\",\"date\"]],gameInfo[\"wteam\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddb394e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def translateX(team_ids: pd.Series, dates: pd.Series, polished_df: pd.DataFrame):\n",
+    "    \"\"\"\n",
+    "    Maps each (team, date) pair to exactly one stats row.\n",
+    "    Always returns a 2D NumPy array with consistent shape.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    lookup = polished_df.set_index([\"team\", \"date\"]).sort_index()\n",
+    "\n",
+    "    stat_cols = lookup.columns.tolist() \n",
+    "    zero_row = np.zeros(len(stat_cols)) \n",
+    "\n",
+    "    rows = []\n",
+    "\n",
+    "    for team, date in zip(team_ids, dates):\n",
+    "\n",
+    "        if (team, date) in lookup.index:\n",
+    "            row = lookup.loc[(team, date)]\n",
+    "\n",
+    "            if isinstance(row, pd.DataFrame):\n",
+    "                row = row.iloc[0]\n",
+    "\n",
+    "            row = row.values\n",
+    "        else:\n",
+    "            row = zero_row\n",
+    "\n",
+    "        rows.append(row)\n",
+    "\n",
+    "    return np.vstack(rows)   # <--- KEY FIX"
    ]
   },
   {
@@ -1075,8 +947,35 @@
    "execution_count": null,
    "id": "0ace3bc5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3.80000000e+01 3.39534884e+01 4.68604651e+00 ... 0.00000000e+00\n",
+      "  8.02325581e-01 0.00000000e+00]\n",
+      " [3.70882353e+01 3.32352941e+01 4.32352941e+00 ... 2.94117647e-02\n",
+      "  7.05882353e-01 1.00000000e+00]\n",
+      " [3.80575540e+01 3.40431655e+01 4.76978417e+00 ... 0.00000000e+00\n",
+      "  5.97122302e-01 0.00000000e+00]\n",
+      " ...\n",
+      " [3.88709677e+01 3.36129032e+01 5.19354839e+00 ... 0.00000000e+00\n",
+      "  8.06451613e-01 0.00000000e+00]\n",
+      " [3.64242424e+01 3.28181818e+01 3.18181818e+00 ... 0.00000000e+00\n",
+      "  1.81818182e-01 1.00000000e+00]\n",
+      " [3.95490196e+01 3.50392157e+01 6.00000000e+00 ... 0.00000000e+00\n",
+      "  5.09803922e-01 0.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def train(X, Y, model):\n",
+    "    '''We want to translate X and Y into actual data points that we can have our data train on'''\n",
+    "    polsihed_team1 = translateX(X[\"visteam\"], X [\"date\"], polished_teamStats_df)\n",
+    "    polished_team2 = translateX(X[\"hometeam\"], X[\"date\"], polished_teamStats_df)\n",
+    "\n",
+    "train(X_train, Y_train, \"\")"
+   ]
   }
  ],
  "metadata": {
